[package]
name = "ak8963"
version = "1.0.1"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the AK8963 magnetometer."
repository = "https://github.com/braincore/8963-rs"
keywords = ["ak8963"]
readme = "README.md"

[dependencies]
byteorder = "1.1.0"
i2cdev = "0.3.1"
ndarray = "0.11.2"

[[example]]
name = "scan"
crate-type = ["bin"]
